*****************
* StateS v. 0.3 *
*****************

- 2013-04-12 - V 0.3   - (Internal) Moved to smart pointers for objects management, except for QWidgets. UI improvements.

*****************
* StateS v. 0.2 *
*****************

- 2015-03-13 - V 0.2.7 - Reorganized simulation, added auto step feature; Reorganized new FSM / clear FSM.
- 2015-03-07 - V 0.2.6 - Bugfix: Starting simulation no longer results in a crash when no inputs declared.
- 2015-02-20 - V 0.2.5 - Constants are now constant in truth tables.
- 2015-02-20 - V 0.2.4 - Added a verifier tool.
- 2015-02-19 - V 0.2.3 - Corrected errors on equation editor; Implemented truth tables.
- 2015-02-17 - V 0.2.2 - Added basic support for FSM export to VHDL (still no support for pulse actions on states and all actions on transitions).
- 2015-02-15 - V 0.2.1 - Added a selection window when multiple target states available in simulation.
- 2015-02-09 - V 0.2   - * Warning! Save files compatibility broken! * Added support for multiple bits signals, constants, signals initial value and equal/diff equations. Simulation input now has a real implementation instead of a list.

*****************
* StateS v. 0.1 *
*****************

2014-11-16 - V 0.1.7 - Added support for variable affectation, which allows to maintain variable state.
2014-11-16 - V 0.1.6 - Allow machine drawing using contextual menu.
2014-11-16 - V 0.1.5 - Variables state on conditions (color) now displayed independently for each variable instead of the whole transition.
2014-11-16 - V 0.1.4 - * Warning! Save files compatibility broken! * Added support for equations with more than two operands.
2014-11-14 - V 0.1.3 - Now allow dragging scene using middle mouse button.
2014-11-14 - V 0.1.2 - Added icons on buttons and custom cursor shapes for machine building.
2014-11-13 - V 0.1.1 - Rebuild simulator tab. Added a hint for how to use inputs.
2014-11-11 - V 0.1   - Initial release.