@@ -2,7 +2,8 @@
 * StateS v. 0.3 *
 *****************
 
-- 2013-04-12 - V 0.3   - (Internal) Moved to smart pointers for objects management, except for QWidgets. UI improvements.
+- 2015-05-12 - V 0.3.1 - Bug fix: unable to remove actions from states and transitions.
+- 2015-04-12 - V 0.3   - (Internal) Moved to smart pointers for objects management, except for QWidgets. UI improvements.
 
 *****************
 * StateS v. 0.2 *
